--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert",
     "migration:recreatedb": "ts-node ./node_modules/typeorm/cli.js schema:drop && npm run migration:run",
     "seed:run": "ts-node ./src/seed.ts",
-    "prod": "npm run build && pm2 restart apps.json"
+    "prod": "npm run build && pm2 restart apps.json",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@bull-board/express": "^4.5.0",
@@ -106,6 +107,7 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -116,6 +118,7 @@
     "eslint-plugin-sonarjs": "^0.12.0",
     "eslint-plugin-unicorn": "^41.0.0",
     "express-ctx": "^0.1.1",
+    "husky": "^8.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
@@ -125,6 +128,11 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
   "jest": {
     "moduleFileExtensions": [
