--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build:all": "concurrently \"nest build api-public\" \"nest build polygon-crawler\" \"nest build crawler\" \"nest build worker\" \"nest build trigger-price\" \"nest build monitor\" \"nest build admin-api\" \"nest build rebuild\" \"nest build mail\" \"nest build otc-builder\" \"nest build scheduler\"",
+    "build:all": "concurrently \"nest build api-public\"",
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
@@ -32,6 +32,7 @@
     "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/bull": "^10.1.1",
+    "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -77,7 +78,6 @@
     "ws": "^8.17.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcryptjs": "^2.4.6",
