--- a/package.json
+++ b/package.json
@@ -72,8 +72,12 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.5",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.20",
     "typeorm-transactional": "^0.5.0",
+    "typescript": "^5.1.3",
     "uuid": "^10.0.0",
     "ws": "^8.17.0"
   },
@@ -103,11 +107,7 @@
     "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "ts-jest": "^29.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
